--- a/MyFile.html
+++ b/MyFile.html
@@ -1,6 +1,6 @@
 <html>
 
-<body>
+<body bgcolor="yellow">
 <center><h1>Информация обо мне</h1></center>
 Я ничего не понимаю в программировании.<br/>
 <font color="red">У меня лапки.</font>
